# Changelog
- Added an option to hide the separator
- Added an option to hide the bar's delimiters