@@ -1,3 +1,4 @@
 # Changelog
-- Added an option to hide the separator
-- Added an option to hide the bar's delimiters
+- Fixed a bug that caused bars to seem 100% full when using --no-color
+- Slight modifications to the wording used in the help text
+- No longer generate a random number when picking which ASCII art to display
